latex2mmlc/tests/snapshots/wiki_test__wiki107.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "x_2^3 \\\\ {x_2}^3"
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>2</mn>
        <mn>3</mn>
    </msubsup>
    
    <msup>
        <msub>
            <mi>x</mi>
            <mn>2</mn>
        </msub>
        <mn>3</mn>
    </msup>
</math>
