latex2mmlc/tests/snapshots/wiki_test__wiki111.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\dot{x}, \\ddot{x}"
---
<math>
    <mover>
        <mi>x</mi>
        <mo accent="true">˙</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>x</mi>
        <mo accent="true">¨</mo>
    </mover>
</math>
