latex2mmlc/tests/snapshots/wiki_test__wiki112.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\hat a \\ \\bar b \\ \\vec c \\\\ \\overrightarrow{a b} \\ \\overleftarrow{c d}\\\\ \\widehat{d e f} \\\\ \\overline{g h i} \\ \\underline{j k l}"
---
<math>
    <mover>
        <mi>a</mi>
        <mo accent="true" stretchy="false">^</mo>
    </mover>
    <mspace width="1em"/>
    <mover>
        <mi>b</mi>
        <mo accent="true" stretchy="false">¯</mo>
    </mover>
    <mspace width="1em"/>
    <mover>
        <mi>c</mi>
        <mo accent="true" stretchy="false">→</mo>
    </mover>
    <mover>
        <mrow>
            <mi>a</mi>
            <mi>b</mi>
        </mrow>
        <mo accent="true">→</mo>
    </mover>
    <mspace width="1em"/>
    <mover>
        <mrow>
            <mi>c</mi>
            <mi>d</mi>
        </mrow>
        <mo accent="true">←</mo>
    </mover>
    <mover>
        <mrow>
            <mi>d</mi>
            <mi>e</mi>
            <mi>f</mi>
        </mrow>
        <mo accent="true">^</mo>
    </mover>
    <mover>
        <mrow>
            <mi>g</mi>
            <mi>h</mi>
            <mi>i</mi>
        </mrow>
        <mo accent="true">‾</mo>
    </mover>
    <mspace width="1em"/>
    <munder>
        <mrow>
            <mi>j</mi>
            <mi>k</mi>
            <mi>l</mi>
        </mrow>
        <mo accent="true">_</mo>
    </munder>
</math>
