latex2mmlc/tests/snapshots/wiki_test__wiki113.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\overset{\\frown} {AB}"
---
<math>
    <mover>
        <mrow>
            <mi>A</mi>
            <mi>B</mi>
        </mrow>
        <mo>⌢</mo>
    </mover>
</math>
