latex2mmlc/tests/snapshots/wiki_test__wiki115.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\overbrace{ 1+2+\\cdots+100 }^{5050}"
---
<math>
    <mover>
        <mover>
            <mrow>
                <mn>1</mn>
                <mo>+</mo>
                <mn>2</mn>
                <mo>+</mo>
                <mo>⋯</mo>
                <mo>+</mo>
                <mn>100</mn>
            </mrow>
            <mo>⏞</mo>
        </mover>
        <mn>5050</mn>
    </mover>
</math>
