latex2mmlc/tests/snapshots/wiki_test__wiki116.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\underbrace{ a+b+\\cdots+z }_{26}"
---
<math>
    <munder>
        <mrow>
            <mi>a</mi>
            <mo>+</mo>
            <mi>b</mi>
            <mo>+</mo>
            <mo>⋯</mo>
            <mo>+</mo>
            <mi>z</mi>
        </mrow>
        <munder>
            <mo>⏟</mo>
            <mn>26</mn>
        </munder>
    </munder>
</math>
