latex2mmlc/tests/snapshots/wiki_test__wiki117.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\frac{2}{4}=0.5"
---
<math>
    <mfrac>
        <mn>2</mn>
        <mn>4</mn>
    </mfrac>
    <mo>=</mo>
    <mn>0.5</mn>
</math>
