latex2mmlc/tests/snapshots/wiki_test__wiki120.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\binom{n}{k}"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">(</mo>
        <mfrac linethickness="0pt">
            <mi>n</mi>
            <mi>k</mi>
        </mfrac>
        <mo stretchy="true" form="postfix">)</mo>
    </mrow>
</math>
